# AaDS_modul_3

./: CMakeLists.txt  README.md
task1/: ArcGraph.cpp  ArcGraph.h  IGraph.h  ListGraph.cpp  ListGraph.h  MatrixGraph.cpp  MatrixGraph.h  SetGraph.cpp  SetGraph.h  main.cpp
task2/: data.txt  graph_2.cpp
task3/: main.cpp
